# docx-sanitizer

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  part.rs  policy.rs  relationships.rs  report.rs  sanitize.rs  zip.rs
src/xml/: instr_text.rs  media.rs  mod.rs  props.rs  rels.rs  rewrite.rs  text.rs  track_changes.rs
tests/: real_fixture.rs
tests/fixtures/: test-doc-2.docx  test-doc-3.docx  test-doc-4.docx  test-doc.docx
