[package]
name = "docx-sanitizer"
version = "0.1.0"
edition = "2024"
description = "Structure-preserving sanitization tool for DOCX files"
license = "MIT"

[[bin]]
name = "docx-sanitizer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
quick-xml = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zip = "4"
