[package]
name = "docx-sanitizer"
version = "0.1.3"
edition = "2024"
description = "Structure-preserving sanitization tool for DOCX files"
license = "MIT"
repository = "https://github.com/artemnistuley/docx-sanitizer/"
keywords = ["docx", "ooxml", "sanitize", "redact", "privacy"]
categories = ["command-line-utilities"]
exclude = ["tests/fixtures/*.docx"]

[[bin]]
name = "docx-sanitizer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
quick-xml = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zip = "4"
